--- a/templates/index.html
+++ b/templates/index.html
@@ -125,8 +125,8 @@
             </form>
           </div>
 
-          <div class="col-xl-2 col-md-4">
-            <form action="/view-person">
+          <!-- <div class="col-xl-2 col-md-4">
+            <form action="/view-profile">
               <div class="icon-box">
                 <i class="ri-calendar-todo-line"></i>
                 <button type="submit" class="btn btn-warning">
@@ -134,7 +134,7 @@
                 </button>
               </div>
             </form>
-          </div>
+          </div> -->
 
           <div class="col-xl-2 col-md-4">
             <form action="/view-all" method="POST">
