--- a/templates/upload_existing.html
+++ b/templates/upload_existing.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <title>UPLOAD IN EXISTING</title>
-    <link href=
-    "{{"https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i"}}"
-    rel="stylesheet">
+    <link
+      href="{{'https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i'}}"
+      rel="stylesheet"
+    />
     <link
       href="{{url_for('static',filename='css/main.css')}}"
       rel="stylesheet"
