--- a/templates/index.html
+++ b/templates/index.html
@@ -136,7 +136,7 @@
           </div>
 
           <div class="col-xl-2 col-md-4">
-            <form action="/train_model">
+            <form action="/train_ model">
               <div class="icon-box">
                 <i class="ri-calendar-todo-line"></i>
                 <button type="submit" class="btn btn-warning">
@@ -147,7 +147,7 @@
           </div>
 
           <div class="col-xl-2 col-md-4">
-            <form action="/test_model">
+            <form action="/test-model">
               <div class="icon-box">
                 <i class="ri-calendar-todo-line"></i>
                 <button type="submit" class="btn btn-warning">
