--- a/templates/upload.html
+++ b/templates/upload.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>NEW CASE</title>
     <link href=
-    "{{"https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i"}}"
+    "{{'https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i'}}"
     rel="stylesheet">
     <link
       href="{{url_for('static',filename='css/main.css')}}"
@@ -33,6 +33,7 @@
             <br>
             <label for="description">Description</label>
             <textarea class="form-control" id="description" name="description" rows="3"></textarea>
+            <button type="submit" >Upload</button>
         </div>
       </div>
     </div>
