--- a/templates/view-all.html
+++ b/templates/view-all.html
@@ -17,39 +17,37 @@
 <body>
 
     <!-- ======= Header ======= -->
-    <header id="header" class="fixed-top bg-dark">
+    <header id="header" class="fixed-top ">
         <div class="container d-flex align-items-center justify-content-lg-between">
-            <h1 class="logo me-auto me-lg-0"><a href="index.html"><span>FIND</span></a></h1>
+            <h1 class="logo me-auto me-lg-0"><a href="index.html"><span>PEOPLE-FINDER</span></a></h1>
             <!-- Uncomment below if you prefer to use an image logo -->
             <a href="index.html" class="logo me-auto me-lg-0"><img src="{{'static/img/icons8-search-client-32.png'}}" alt=""
                     class="img-fluid"></a>
 
             <nav id="navbar" class="navbar order-last order-lg-0">
-                <ul>
-                    <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-                    <li><a class="nav-link scrollto" href="#about">About</a></li>
-                    <li><a class="nav-link scrollto" href="#services">Services</a></li>
-
-                    <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-                        <ul>
-                            <li><a href="#">Drop Down 1</a></li>
-                            <li><a href="#">Drop Down 2</a></li>
-                            <li><a href="#">Drop Down 3</a></li>
-                            <li><a href="#">Drop Down 4</a></li>
-                        </ul>
-                    </li>
-                </ul>
-                <i class="bi bi-list mobile-nav-toggle"></i>
-            </nav><!-- .navbar -->
-
+          <ul>
+            <li>
+              <a class="nav-link scrollto active" href="#hero">NEW CASE</a>
+            </li>
+            <li><a class="nav-link scrollto" href="#about">EXISTING</a></li>
+            <li>
+              <a class="nav-link scrollto" href="#services">TEST MODEL</a>
+            </li>
+            <li>
+              <a class="nav-link scrollto" href="#services">TRAIN MODEL</a>
+            </li>
+            <li><a class="nav-link scrollto" href="#contact">CONTACT</a></li>
+          </ul>
+          <i class="bi bi-list mobile-nav-toggle"></i>
+        </nav>
             
 
         </div>
     </header><!-- End Header -->
-    <!-- ======= Hero Section ======= -->
-    <div class="all_view">
-    <br><br><br>
-    <section id="hero2" class="d-flex align-items-center justify-content-center">
+
+<!-- ======= Hero Section ======= -->
+<div class="all_view">
+    <section id="hero2" class="d-flex align-items-center justify-content-center" style="padding:55px;">
         <div class="container" data-aos="fade-up">
             <div class="row align-items-stretch justify-content-start card-deck">
 
@@ -57,15 +55,10 @@
                  <div class="col-sm-3 flip-card cards card-2 text-center" style="width: 18rem;">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
-                              <img src=" {{detail[image]['photo']}}" height="100%" width="100%" alt= {{detail[image]['photo']}}>
+                              <img src=" {{detail[image]["photo"]}}" height="100%" width="100%" alt= {{detail[image]["photo"]}}>
                         </div>
-                        <form action="/view-profile/{{detail[image]['id']}}" class="flip-card-back">
-                            <h2>{{detail[image]["id"]}}:{{detail[image]["name"]}}</h2>
-                            <p>{{detail[image]["age"]}}</p>
-                            <p>{{detail[image]["where_found"]}}</p>
-                            <p>{{detail[image]["description"]}}</p>
-                            <p>{{detail[image]["contact"]}}</p>
-                            <button type="submit" >VIEW PROFILE</button>
+                        <form action="/view-profile/{{detail[image]['id']}}" class="flip-card-back" style="background-color:#35363;">
+                            <button type="submit" class="btn btn-warning" style="margin-top:40%;">VIEW PROFILE</button>
                         </form>
                     </div>
                 </div>  
