--- a/templates/view-person.html
+++ b/templates/view-person.html
@@ -20,26 +20,27 @@
     <!-- ======= Header ======= -->
     <header id="header" class="fixed-top ">
         <div class="container d-flex align-items-center justify-content-lg-between">
-            <h1 class="logo me-auto me-lg-0"><a href="index.html"><span>FIND</span></a></h1>
+            <h1 class="logo me-auto me-lg-0"><a href="index.html"><span>PEOPLE-FINDER</span></a></h1>
             <!-- Uncomment below if you prefer to use an image logo -->
             <a href="index.html" class="logo me-auto me-lg-0"><img src="{{'static/img/icons8-search-client-32.png'}}" alt=""
                     class="img-fluid"></a>
 
             <nav id="navbar" class="navbar order-last order-lg-0">
-                <ul>
-                    <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-                    <li><a class="nav-link scrollto" href="#about" hidden>About</a></li>
-                    <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-                        <ul>
-                            <li><a href="#">Drop Down 1</a></li>
-                            <li><a href="#">Drop Down 2</a></li>
-                            <li><a href="#">Drop Down 3</a></li>
-                            <li><a href="#">Drop Down 4</a></li>
-                        </ul>
-                    </li>
-                </ul>
-                <i class="bi bi-list mobile-nav-toggle"></i>
-            </nav><!-- .navbar -->
+          <ul>
+            <li>
+              <a class="nav-link scrollto active" href="#hero">NEW CASE</a>
+            </li>
+            <li><a class="nav-link scrollto" href="#about">EXISTING</a></li>
+            <li>
+              <a class="nav-link scrollto" href="#services">TEST MODEL</a>
+            </li>
+            <li>
+              <a class="nav-link scrollto" href="#services">TRAIN MODEL</a>
+            </li>
+            <li><a class="nav-link scrollto" href="#contact">CONTACT</a></li>
+          </ul>
+          <i class="bi bi-list mobile-nav-toggle"></i>
+        </nav>
 
         </div>
     </header><!-- End Header --> 
