--- a/templates/view-profile.html
+++ b/templates/view-profile.html
@@ -5,74 +5,69 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>FIND MISSING</title>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link href="{{'static/img/icons8-search-client-32.png'}}" rel="icon" />
-    <link rel="stylesheet" href="{{url_for('static',filename='vendor/bootstrap/css/bootstrap.min.css')}}" />
-    <link rel="stylesheet" href="{{url_for('static',filename='vendor/boxicons/css/boxicons.min.css')}}" />
-    <link rel="stylesheet" href="{{url_for('static',filename='vendor/remixicon/remixicon.css')}}" />
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/style.css') }}" />
+   
+    <script src= "{{"https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"}}"></script>
+     <link href="{{'static/img/icons8-search-client-32.png'}}" rel="icon" />
+    <link rel="stylesheet" href ="{{url_for('static',filename='vendor/bootstrap/css/bootstrap.min.css')}}" />
+    <link rel="stylesheet" href =  "{{url_for('static',filename='vendor/boxicons/css/boxicons.min.css')}}" />
+    <link rel="stylesheet" href =  "{{url_for('static',filename='vendor/remixicon/remixicon.css')}}" />
+    <link rel="stylesheet" type = "text/css" href =  "{{ url_for('static',filename='css/style.css') }}" />
 
 </head>
 
 <body>
-    <br><br><br>
-    <!-- ======= Header ======= -->
-    <header id="header" class="fixed-top bg-dark">
-        <div class="container d-flex align-items-center justify-content-lg-between">
-            <h1 class="logo me-auto me-lg-0"><a href="index.html"><span>FIND</span></a></h1>
-            <!-- Uncomment below if you prefer to use an image logo -->
-            <a href="index.html" class="logo me-auto me-lg-0"><img src="{{'static/img/icons8-search-client-32.png'}}"
-                    alt="" class="img-fluid"></a>
 
-            <nav id="navbar" class="navbar order-last order-lg-0">
-                <ul>
-                    <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-                    <li><a class="nav-link scrollto" href="#about">About</a></li>
-                    <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-                        <ul>
-                            <li><a href="#">Drop Down 1</a></li>
-                            <li><a href="#">Drop Down 2</a></li>
-                            <li><a href="#">Drop Down 3</a></li>
-                            <li><a href="#">Drop Down 4</a></li>
-                        </ul>
-                    </li>
-                    <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-                </ul>
-                <i class="bi bi-list mobile-nav-toggle"></i>
-            </nav><!-- .navbar -->
-            <a href="#about" class="get-started-btn scrollto">Get Started</a>
+    <!-- ======= Header ======= -->
+    <header id="header" class="fixed-top ">
+        <div class="container d-flex align-items-center justify-content-lg-between">
+            <h1 class="logo me-auto me-lg-0"><a href="index.html"><span>PEOPLE-FINDER</span></a></h1>
+            <!-- Uncomment below if you prefer to use an image logo -->
+            <a href="index.html" class="logo me-auto me-lg-0"><img src="{{'static/img/icons8-search-client-32.png'}}" alt=""
+                    class="img-fluid"></a>
+
+           <nav id="navbar" class="navbar order-last order-lg-0">
+          <ul>
+            <li>
+              <a class="nav-link scrollto active" href="#hero">NEW CASE</a>
+            </li>
+            <li><a class="nav-link scrollto" href="#about">EXISTING</a></li>
+            <li>
+              <a class="nav-link scrollto" href="#services">TEST MODEL</a>
+            </li>
+            <li>
+              <a class="nav-link scrollto" href="#services">TRAIN MODEL</a>
+            </li>
+            <li><a class="nav-link scrollto" href="#contact">CONTACT</a></li>
+          </ul>
+          <i class="bi bi-list mobile-nav-toggle"></i>
+        </nav>
 
         </div>
-    </header><!-- End Header -->
-
-
-
-
-
-    <section id="hero2" class="d-flex align-items-center justify-content-center">
-        <div class="container" data-aos="fade-up">
-
-            <div class="form">
-                <form class="view-person-form" action="" method="post">
-                    <label for="name" style="color:#ffc451;">ENTER ID:</label>
-                    <input type="text" id="id" name="id"
-                        style="opacity:0.4; border: 2px solid #f7b231; border-radius: 4px;background:#ffc451;">
-                    <input type="submit" value="View"
-                        style=" background:#1f1e1c;border: 1px solid #ffc451;color:#f6f3ef; border-radius: 4px;">
-                </form>
-            </div>
-
+    </header><!-- End Header --> 
+    <section id="hero2" class="d-flex align-items-center justify-content-center" style="padding:55px;">
+        <div class="container" data-aos="fade-up" >  
+    <div class="form" style="padding-top:25px;padding-bottom:25px;">
+      <form class="view-person-form" action="" method="post">
+        <label for="name"  style="color:#ffc451;">ENTER ID:</label>
+          <input type="text" id="id" name="id" style="opacity:0.4; border: 2px solid #f7b231; border-radius: 4px;background:#ffc451;">
+          <input type="submit" value="View" style=" background:#1f1e1c;border: 1px solid #ffc451;color:#f6f3ef; border-radius: 4px;" >
+      </form>
+    </div>
+            {% if id %}
+        <div class="center" style="  margin: auto;
+  width: 50%;
+  border: 3px solid #ffc451;
+  border-radius:5%;
+  padding: 10px;">
+                    <h3 style="color:#ffc451;margin:5px">Name :{{ name }}</h3>
+                    <p style="color:#ffc451;">Age :{{ age }}</p>
+                    <p style="color:#ffc451;">ID :{{ id }}</p>
+                    <p style="color:#ffc451;">Description :{{ description }}</p>
+        </div>
+      
 
             <div class="row align-items-stretch justify-content-start card-deck">
-                {% if id %}
-                <div class="bg-dark">
-                    <h1>Name :{{ name }}</h1>
-                    <h1>Age :{{ age }}</h1>
-                    <h1>ID :{{ id }}</h1>
-                    <h1>Description :{{ description }}</h1>
-                </div>
-                    
+           
                 {%for image in images %}
                 <div class="col-sm-3 flip-card cards card-2 text-center" style="width: 18rem;">
                     <img src="{{image}}" height="100%" width="100%" alt="">
@@ -80,10 +75,9 @@
                 {% endfor %}
                 {% endif %}
             </div>
-        </div>
     </section><!-- End Hero -->
-
-    <!-- ======= Hero Section ======= -->
+  
+<!-- ======= Hero Section ======= -->
 
     <!-- ======= Footer ======= -->
     <footer id="footer">
@@ -92,8 +86,7 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-info">
-                            <h3><span><img src="{{'static/img/icons8-search-client-96.png'}}" alt="" srcset=""></span>
-                            </h3>
+                            <h3><span><img src="{{'static/img/icons8-search-client-96.png'}}" alt="" srcset=""></span></h3>
                             <p>
                                 KIET COLLEGE <br>
                                 MANDIR WALI GALI 201206, INDIA<br><br>
@@ -127,16 +120,31 @@
 
         <div class="container">
             <div class="copyright">
-                <a href=""><strong><span>MADE WITH LOVE FROM RANGERS</span></strong></a>
+                 <a href = ""><strong><span>MADE WITH LOVE FROM RANGERS</span></strong></a>
             </div>
         </div>
         </div>
     </footer><!-- End Footer -->
 
-    <script src="{{url_for('static',filename='js/jQuery.js')}}"></script>
     <script src="{{url_for('static',filename='js/main.js')}}"></script>
-
+  
 
 </body>
 
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ 
