--- a/templates/index.html
+++ b/templates/index.html
@@ -43,30 +43,31 @@
         class="container d-flex align-items-center justify-content-lg-between"
       >
         <h1 class="logo me-auto me-lg-0">
-          <a href="index.html"><span>PEOPLE-FINDER</span></a>
+          <a href="./"><span>PEOPLE-FINDER</span></a>
         </h1>
         <!-- Uncomment below if you prefer to use an image logo -->
-        <a href="index.html" class="logo me-auto me-lg-0">
-          <img
-            src="{{'static/img/icons8-search-client-32.png'}}"
-            alt=""
-            class="img-fluid"
-          />
-        </a>
 
-         <nav id="navbar" class="navbar order-last order-lg-0">
+        <img
+          src="{{'static/img/icons8-search-client-32.png'}}"
+          alt=""
+          class="img-fluid"
+        />
+
+        <nav id="navbar" class="navbar order-last order-lg-0">
           <ul>
             <li>
-              <a class="nav-link scrollto active" href="#hero">NEW CASE</a>
-            </li>
-            <li><a class="nav-link scrollto" href="#about">EXISTING</a></li>
-            <li>
-              <a class="nav-link scrollto" href="#services">TEST MODEL</a>
+              <a class="nav-link scrollto active" href="./upload">NEW CASE</a>
             </li>
             <li>
-              <a class="nav-link scrollto" href="#services">TRAIN MODEL</a>
+              <a class="nav-link scrollto" href="./upload-existing">EXISTING</a>
             </li>
-            <li><a class="nav-link scrollto" href="#contact">CONTACT</a></li>
+            <li>
+              <a class="nav-link scrollto" href="./test-model">TEST MODEL</a>
+            </li>
+            <li>
+              <a class="nav-link scrollto" href="">TRAIN MODEL</a>
+            </li>
+            <li><a class="nav-link scrollto" href="./view-all">VIEW-ALL</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
@@ -84,8 +85,8 @@
           data-aos-delay="150"
         >
           <div class="col-xl-6 col-lg-8">
-            <h1>THIS IS AN OFFICIAL PORTAL<span></span></h1>
-            <h2>We are team to help you find your beloved missing</h2>
+            <h1>WELCOME TO THE PORTAL<span></span></h1>
+            <h2>We are team to help you find your beloved missing.</h2>
           </div>
         </div>
 
@@ -97,10 +98,10 @@
           <div class="col-xl-2 col-md-4">
             <form action="/upload" enctype="multipart/form-data">
               <div class="icon-box">
-                <i class="ri-store-line"></i>
+                <i class="ri-bar-chart-box-line"></i>
                 <button type="submit" class="btn btn-warning">
                   <h3>NEW CASE</h3>
-                  <br>
+                  <br />
                 </button>
               </div>
             </form>
@@ -120,7 +121,7 @@
           <div class="col-xl-2 col-md-4">
             <form action="/train_ model">
               <div class="icon-box">
-                <i class="ri-calendar-todo-line"></i>
+                <i class="ri-bar-chart-box-line"></i>
                 <button type="submit" class="btn btn-warning">
                   <h3>TRAIN MODEL</h3>
                 </button>
@@ -131,7 +132,7 @@
           <div class="col-xl-2 col-md-4">
             <form action="/test-model">
               <div class="icon-box">
-                <i class="ri-calendar-todo-line"></i>
+                <i class="ri-bar-chart-box-line"></i>
                 <button type="submit" class="btn btn-warning">
                   <h3>TEST MODEL</h3>
                   <br />
@@ -143,7 +144,7 @@
           <div class="col-xl-2 col-md-4">
             <form action="/view-all" method="POST">
               <div class="icon-box">
-                <i class="ri-paint-brush-line"></i>
+                <i class="ri-bar-chart-box-line"></i>
                 <button type="submit" class="btn btn-warning">
                   <h3>ALL MISSING PERSON</h3>
                 </button>
@@ -157,78 +158,8 @@
 
     <!-- ======= Footer ======= -->
     <footer id="footer">
-      <div class="footer-top">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-3 col-md-6">
-              <div class="footer-info">
-                <h3>
-                  <span>
-                    <img
-                      src="{{'static/img/icons8-search-client-96.png'}}"
-                      alt=""
-                      srcset=""
-                  /></span>
-                </h3>
-                <p>
-                  KIET COLLEGE <br />
-                  MANDIR WALI GALI 201206, INDIA<br /><br />
-                  <strong>Phone:</strong> +1 9999 9999 55<br />
-                  <strong>Email:</strong> findmissingone@gmail.com<br />
-                </p>
-                <div class="social-links mt-3">
-                  <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                  <a href="#" class="facebook"
-                    ><i class="bx bxl-facebook"></i
-                  ></a>
-                  <a href="#" class="instagram"
-                    ><i class="bx bxl-instagram"></i
-                  ></a>
-                  <a href="#" class="google-plus"
-                    ><i class="bx bxl-skype"></i
-                  ></a>
-                  <a href="#" class="linkedin"
-                    ><i class="bx bxl-linkedin"></i
-                  ></a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-2 col-md-6 footer-links">
-              <h4>Useful Links</h4>
-              <ul>
-                <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">Home</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">About us</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">Services</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i>
-                  <a href="#">Terms of service</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i>
-                  <a href="#">Privacy policy</a>
-                </li>
-              </ul>
-            </div>
-
-          </div>
-        </div>
-      </div>
-
       <div class="container">
-        <div class="copyright">
-          &copy; Copyright <strong><span>RANGERS</span></strong
-          >. All Rights Reserved
-        </div>
-        <div class="credits">
-          Designed by <a href="https://bootstrapmade.com/">RANGERS</a>
-        </div>
+        <div class="credits">MADE WITH LOVE BY<a href="./"> TECHADRON</a></div>
       </div>
     </footer>
 
