--- a/templates/view-all.html
+++ b/templates/view-all.html
@@ -1,134 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <head>
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>FIND MISSING</title>
 
-     <link href="{{'static/img/icons8-search-client-32.png'}}" rel="icon" />
-    <link rel="stylesheet" href ="{{url_for('static',filename='vendor/bootstrap/css/bootstrap.min.css')}}" />
-    <link rel="stylesheet" href =  "{{url_for('static',filename='vendor/boxicons/css/boxicons.min.css')}}" />
-    <link rel="stylesheet" href =  "{{url_for('static',filename='vendor/remixicon/remixicon.css')}}" />
-    <link rel="stylesheet" type = "text/css" href =  "{{ url_for('static',filename='css/style.css') }}" />
+    <link href="{{'static/img/icons8-search-client-32.png'}}" rel="icon" />
+    <link
+      rel="stylesheet"
+      href="{{url_for('static',filename='vendor/bootstrap/css/bootstrap.min.css')}}"
+    />
+    <link
+      rel="stylesheet"
+      href="{{url_for('static',filename='vendor/boxicons/css/boxicons.min.css')}}"
+    />
+    <link
+      rel="stylesheet"
+      href="{{url_for('static',filename='vendor/remixicon/remixicon.css')}}"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for('static',filename='css/style.css') }}"
+    />
+  </head>
 
-</head>
-
-<body>
-
+  <body>
     <!-- ======= Header ======= -->
-    <header id="header" class="fixed-top ">
-        <div class="container d-flex align-items-center justify-content-lg-between">
-            <h1 class="logo me-auto me-lg-0"><a href="index.html"><span>PEOPLE-FINDER</span></a></h1>
-            <!-- Uncomment below if you prefer to use an image logo -->
-            <a href="index.html" class="logo me-auto me-lg-0"><img src="{{'static/img/icons8-search-client-32.png'}}" alt=""
-                    class="img-fluid"></a>
+    <header id="header" class="fixed-top">
+      <div
+        class="container d-flex align-items-center justify-content-lg-between"
+      >
+        <h1 class="logo me-auto me-lg-0">
+          <a href="./"><span>PEOPLE-FINDER</span></a>
+        </h1>
+        <!-- Uncomment below if you prefer to use an image logo -->
+        <a href="index.html" class="logo me-auto me-lg-0"
+          ><img
+            src="{{'static/img/icons8-search-client-32.png'}}"
+            alt=""
+            class="img-fluid"
+        /></a>
 
-            <nav id="navbar" class="navbar order-last order-lg-0">
+        <nav id="navbar" class="navbar order-last order-lg-0">
           <ul>
             <li>
-              <a class="nav-link scrollto active" href="#hero">NEW CASE</a>
-            </li>
-            <li><a class="nav-link scrollto" href="#about">EXISTING</a></li>
-            <li>
-              <a class="nav-link scrollto" href="#services">TEST MODEL</a>
+              <a class="nav-link scrollto active" href="./upload">NEW CASE</a>
             </li>
             <li>
-              <a class="nav-link scrollto" href="#services">TRAIN MODEL</a>
+              <a class="nav-link scrollto" href="./upload-existing">EXISTING</a>
             </li>
-            <li><a class="nav-link scrollto" href="#contact">CONTACT</a></li>
+            <li>
+              <a class="nav-link scrollto" href="./test-model">TEST MODEL</a>
+            </li>
+            <li>
+              <a class="nav-link scrollto" href="">TRAIN MODEL</a>
+            </li>
+            <li><a class="nav-link scrollto" href="./view-all">VIEW-ALL</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
-            
+      </div>
+    </header>
+    <!-- End Header -->
 
-        </div>
-    </header><!-- End Header -->
-
-<!-- ======= Hero Section ======= -->
-<div class="all_view">
-    <section id="hero2" class="d-flex align-items-center justify-content-center" style="padding:55px;">
+    <!-- ======= Hero Section ======= -->
+    <div class="all_view">
+      <section
+        id="hero2"
+        class="d-flex align-items-center justify-content-center"
+        style="padding: 55px"
+      >
         <div class="container" data-aos="fade-up">
-            <div class="row align-items-stretch justify-content-start card-deck">
-
-                {% for image in detail %} 
-                 <div class="col-sm-3 flip-card cards card-2 text-center" style="width: 18rem;">
-                    <div class="flip-card-inner">
-                        <div class="flip-card-front">
-                              <img src=" {{detail[image]["photo"]}}" height="100%" width="100%" alt= {{detail[image]["photo"]}}>
-                        </div>
-                        <form action="/view-profile/{{detail[image]['id']}}" class="flip-card-back" style="background-color:#35363;">
-                            <button type="submit" class="btn btn-warning" style="margin-top:40%;">VIEW PROFILE</button>
-                        </form>
-                    </div>
-                </div>  
-              {% endfor %}
-
-            </div>
-        </div>
-    </section><!-- End Hero -->
-</div>
-
-    <!-- ======= Footer ======= -->
-    <footer id="footer">
-        <div class="footer-top">
-            <div class="container">
-                <div class="row">
-
-                    <div class="col-lg-3 col-md-6">
-                        <div class="footer-info">
-                            <h3><span><img src="{{'static/img/icons8-search-client-96.png'}}" alt="" srcset=""></span></h3>
-                            <p>
-                                KIET COLLEGE <br>
-                                MANDIR WALI GALI 201206, INDIA<br><br>
-                                <strong>Phone:</strong> +1 9999 9999 55<br>
-                                <strong>Email:</strong> findmissingone@gmail.com<br>
-                            </p>
-                            <div class="social-links mt-3">
-                                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-2 col-md-6 footer-links">
-                        <h4>Useful Links</h4>
-                        <ul>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
-                        </ul>
-                    </div>
-
+          <div class="row align-items-stretch justify-content-start card-deck">
+            {% for image in detail %}
+            <div
+              class="col-sm-3 flip-card cards card-2 text-center"
+              style="width: 18rem"
+            >
+              <div class="flip-card-inner">
+                <div class="flip-card-front">
+                  <img src=" {{detail[image]["photo"]}}" height="100%"
+                  width="100%" alt= {{detail[image]["photo"]}}>
                 </div>
+                <form
+                  action="/view-profile/{{detail[image]['id']}}"
+                  class="flip-card-back"
+                  style="background-color: #35363"
+                >
+                  <p style="color: #ffc451; margin-top: 10%">
+                    {{detail[image]['id']}}
+                  </p>
+                  <p style="color: #ffc451; margin-top: 10%">
+                    {{detail[image]['name']}}
+                  </p>
+                  <button
+                    type="submit"
+                    class="btn btn-warning"
+                    style="margin-top: 20%"
+                  >
+                    VIEW PROFILE
+                  </button>
+                </form>
+              </div>
             </div>
+            {% endfor %}
+          </div>
         </div>
+      </section>
+      <!-- End Hero -->
+    </div>
 
-        <div class="container">
-            <div class="copyright">
-                <a href=""><strong><span>DESIGNED BY RANGERS</span></strong></a>
-            </div>
-        </div>
-        </div>
-    </footer><!-- End Footer -->
+    <footer id="footer">
+      <div class="container">
+        <div class="credits">MADE WITH LOVE BY<a href="./"> TECHADRON</a></div>
+      </div>
+    </footer>
 
-    <script src="{{url_for('static',filename='js/main.js')}}"></script> 
-
-</body>
-
+    <script src="{{url_for('static',filename='js/main.js')}}"></script>
+  </body>
 </html>
-
-
-
-
-
-
-
-
-
-
