--- a/templates/view-person.html
+++ b/templates/view-person.html
@@ -1,140 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <head>
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>FIND MISSING</title>
-   
-    <script src= "https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-     <link href="{{'static/img/icons8-search-client-32.png'}}" rel="icon" />
-    <link rel="stylesheet" href ="{{url_for('static',filename='vendor/bootstrap/css/bootstrap.min.css')}}" />
-    <link rel="stylesheet" href =  "{{url_for('static',filename='vendor/boxicons/css/boxicons.min.css')}}" />
-    <link rel="stylesheet" href =  "{{url_for('static',filename='vendor/remixicon/remixicon.css')}}" />
-    <link rel="stylesheet" type = "text/css" href =  "{{ url_for('static',filename='css/style.css') }}" />
 
-</head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link href="{{'static/img/icons8-search-client-32.png'}}" rel="icon" />
+    <link
+      rel="stylesheet"
+      href="{{url_for('static',filename='vendor/bootstrap/css/bootstrap.min.css')}}"
+    />
+    <link
+      rel="stylesheet"
+      href="{{url_for('static',filename='vendor/boxicons/css/boxicons.min.css')}}"
+    />
+    <link
+      rel="stylesheet"
+      href="{{url_for('static',filename='vendor/remixicon/remixicon.css')}}"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for('static',filename='css/style.css') }}"
+    />
+  </head>
 
-<body>
-    <br><br><br><br>
+  <body>
+    <br /><br /><br /><br />
     <!-- ======= Header ======= -->
-    <header id="header" class="fixed-top ">
-        <div class="container d-flex align-items-center justify-content-lg-between">
-            <h1 class="logo me-auto me-lg-0"><a href="index.html"><span>PEOPLE-FINDER</span></a></h1>
-            <!-- Uncomment below if you prefer to use an image logo -->
-            <a href="index.html" class="logo me-auto me-lg-0"><img src="{{'static/img/icons8-search-client-32.png'}}" alt=""
-                    class="img-fluid"></a>
+    <header id="header" class="fixed-top">
+      <div
+        class="container d-flex align-items-center justify-content-lg-between"
+      >
+        <h1 class="logo me-auto me-lg-0">
+          <a href="index.html"><span>PEOPLE-FINDER</span></a>
+        </h1>
+        <!-- Uncomment below if you prefer to use an image logo -->
+        <a href="index.html" class="logo me-auto me-lg-0"
+          ><img
+            src="{{'static/img/icons8-search-client-32.png'}}"
+            alt=""
+            class="img-fluid"
+        /></a>
 
-            <nav id="navbar" class="navbar order-last order-lg-0">
+        <nav id="navbar" class="navbar order-last order-lg-0">
           <ul>
             <li>
-              <a class="nav-link scrollto active" href="#hero">NEW CASE</a>
-            </li>
-            <li><a class="nav-link scrollto" href="#about">EXISTING</a></li>
-            <li>
-              <a class="nav-link scrollto" href="#services">TEST MODEL</a>
+              <a class="nav-link scrollto active" href="./upload">NEW CASE</a>
             </li>
             <li>
-              <a class="nav-link scrollto" href="#services">TRAIN MODEL</a>
+              <a class="nav-link scrollto" href="./upload-existing">EXISTING</a>
             </li>
-            <li><a class="nav-link scrollto" href="#contact">CONTACT</a></li>
+            <li>
+              <a class="nav-link scrollto" href="./test-model">TEST MODEL</a>
+            </li>
+            <li>
+              <a class="nav-link scrollto" href="">TRAIN MODEL</a>
+            </li>
+            <li><a class="nav-link scrollto" href="./view-all">VIEW-ALL</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
-
+      </div>
+    </header>
+    <!-- End Header -->
+    <section
+      id="hero2"
+      class="d-flex align-items-center justify-content-center"
+      style="padding: 55px"
+    >
+      <div class="container" data-aos="fade-up">
+        <div class="form" style="padding-top: 25px; padding-bottom: 25px">
+          <form class="view-person-form" action="" method="post">
+            <label for="name" style="color: #ffc451">ENTER ID:</label>
+            <input
+              type="text"
+              id="id"
+              name="id"
+              style="
+                opacity: 0.4;
+                border: 2px solid #f7b231;
+                border-radius: 4px;
+                background: #ffc451;
+              "
+            />
+            <input
+              type="submit"
+              value="View"
+              style="
+                background: #1f1e1c;
+                border: 1px solid #ffc451;
+                color: #f6f3ef;
+                border-radius: 4px;
+              "
+            />
+          </form>
         </div>
-    </header><!-- End Header --> 
-    <section id="hero2" class="d-flex align-items-center justify-content-center" style="padding:55px;">
-        <div class="container" data-aos="fade-up" >  
-    <div class="form" style="padding-top:25px;padding-bottom:25px;">
-      <form class="view-person-form" action="" method="post">
-        <label for="name"  style="color:#ffc451;">ENTER ID:</label>
-          <input type="text" id="id" name="id" style="opacity:0.4; border: 2px solid #f7b231; border-radius: 4px;background:#ffc451;">
-          <input type="submit" value="View" style=" background:#1f1e1c;border: 1px solid #ffc451;color:#f6f3ef; border-radius: 4px;" >
-      </form>
-    </div>
 
-            <div class="row align-items-stretch justify-content-start card-deck">
-            {% if id %}
-            <h1 style="color:#ffc451;">{{ name }}</h1>
-            {%for image in images %}
-                 <div class="col-sm-3 flip-card cards card-2 text-center" style="width: 18rem;">
-                              <img src="{{image}}" height="100%" width="100%" alt="">
-                </div>  
-                {% endfor %}
-                {% endif %}
-            </div>
+        <div class="row align-items-stretch justify-content-start card-deck">
+          {% if id %}
+          <h1 style="color: #ffc451">{{ name }}</h1>
+          {%for image in images %}
+          <div
+            class="col-sm-3 flip-card cards card-2 text-center"
+            style="width: 18rem"
+          >
+            <img src="{{image}}" height="100%" width="100%" alt="" />
+          </div>
+          {% endfor %} {% endif %}
         </div>
-    </section><!-- End Hero -->
-  
-<!-- ======= Hero Section ======= -->
+      </div>
+    </section>
+    <!-- End Hero -->
 
-    <!-- ======= Footer ======= -->
     <footer id="footer">
-        <div class="footer-top">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-3 col-md-6">
-                        <div class="footer-info">
-                            <h3><span><img src="{{'static/img/icons8-search-client-96.png'}}" alt="" srcset=""></span></h3>
-                            <p>
-                                KIET COLLEGE <br>
-                                MANDIR WALI GALI 201206, INDIA<br><br>
-                                <strong>Phone:</strong> +1 9999 9999 55<br>
-                                <strong>Email:</strong> findmissingone@gmail.com<br>
-                            </p>
-                            <div class="social-links mt-3">
-                                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-2 col-md-6 footer-links">
-                        <h4>Useful Links</h4>
-                        <ul>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
-                        </ul>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-
-        <div class="container">
-            <div class="copyright">
-                 <a href = ""><strong><span>MADE WITH LOVE FROM RANGERS</span></strong></a>
-            </div>
-        </div>
-        </div>
-    </footer><!-- End Footer -->
+      <div class="container">
+        <div class="credits">MADE WITH LOVE BY<a href="./"> TECHADRON</a></div>
+      </div>
+    </footer>
 
     <script src="{{url_for('static',filename='js/main.js')}}"></script>
-  
-
-</body>
-
+  </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
- 
