--- a/templates/view-profile.html
+++ b/templates/view-profile.html
@@ -25,19 +25,21 @@
             <a href="index.html" class="logo me-auto me-lg-0"><img src="{{'static/img/icons8-search-client-32.png'}}" alt=""
                     class="img-fluid"></a>
 
-           <nav id="navbar" class="navbar order-last order-lg-0">
+         <nav id="navbar" class="navbar order-last order-lg-0">
           <ul>
             <li>
-              <a class="nav-link scrollto active" href="#hero">NEW CASE</a>
-            </li>
-            <li><a class="nav-link scrollto" href="#about">EXISTING</a></li>
-            <li>
-              <a class="nav-link scrollto" href="#services">TEST MODEL</a>
+              <a class="nav-link scrollto active" href="./upload">NEW CASE</a>
             </li>
             <li>
-              <a class="nav-link scrollto" href="#services">TRAIN MODEL</a>
+              <a class="nav-link scrollto" href="./upload-existing">EXISTING</a>
             </li>
-            <li><a class="nav-link scrollto" href="#contact">CONTACT</a></li>
+            <li>
+              <a class="nav-link scrollto" href="./test-model">TEST MODEL</a>
+            </li>
+            <li>
+              <a class="nav-link scrollto" href="">TRAIN MODEL</a>
+            </li>
+            <li><a class="nav-link scrollto" href="./view-all">VIEW-ALL</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
@@ -77,54 +79,14 @@
             </div>
     </section><!-- End Hero -->
   
-<!-- ======= Hero Section ======= -->
-
     <!-- ======= Footer ======= -->
-    <footer id="footer">
-        <div class="footer-top">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-3 col-md-6">
-                        <div class="footer-info">
-                            <h3><span><img src="{{'static/img/icons8-search-client-96.png'}}" alt="" srcset=""></span></h3>
-                            <p>
-                                KIET COLLEGE <br>
-                                MANDIR WALI GALI 201206, INDIA<br><br>
-                                <strong>Phone:</strong> +1 9999 9999 55<br>
-                                <strong>Email:</strong> findmissingone@gmail.com<br>
-                            </p>
-                            <div class="social-links mt-3">
-                                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-2 col-md-6 footer-links">
-                        <h4>Useful Links</h4>
-                        <ul>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
-                        </ul>
-                    </div>
-
-                </div>
-            </div>
+     <footer id="footer">
+      <div class="container">
+        <div class="credits">
+          MADE WITH LOVE BY<a href="./"> TECHADRON</a>
         </div>
-
-        <div class="container">
-            <div class="copyright">
-                 <a href = ""><strong><span>MADE WITH LOVE FROM RANGERS</span></strong></a>
-            </div>
-        </div>
-        </div>
-    </footer><!-- End Footer -->
+      </div>
+    </footer>
 
     <script src="{{url_for('static',filename='js/main.js')}}"></script>
   
