--- a/templates/view-profile.html
+++ b/templates/view-profile.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-
+   <div class="bg-img">
     <!-- ======= Header ======= -->
     <header id="header" class="fixed-top ">
         <div class="container d-flex align-items-center justify-content-lg-between">
@@ -89,7 +89,7 @@
     </footer>
 
     <script src="{{url_for('static',filename='js/main.js')}}"></script>
-  
+  </div>
 
 </body>
 
