--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,14 @@
+.bg-img {
+  background-image: url("../img/hero-bg.jpg");
+  min-height: 380px;
+  position: relative;
+  background-attachment: fixed;
+}
+
 #hero2 {
   width: 100%;
   /* height: 100vh; */
-  background: url("../img/hero-bg.jpg") top center;
+  /* background: white; */
   background-size: cover;
   position: relative;
   padding-bottom: 10px;
@@ -66,7 +73,7 @@
 
 .flip-card-back {
   border-radius: 5px;
-  
+
   transform: rotateY(180deg);
   background-color: #221b1b;
 }
@@ -645,3 +652,20 @@ h6 {
   font-size: 13px;
   color: #fff;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
