--- a/templates/view-all.html
+++ b/templates/view-all.html
@@ -26,6 +26,7 @@
   </head>
 
   <body>
+    <div class="bg-img">
     <!-- ======= Header ======= -->
     <header id="header" class="fixed-top">
       <div
@@ -118,5 +119,6 @@
     </footer>
 
     <script src="{{url_for('static',filename='js/main.js')}}"></script>
+    <div>
   </body>
 </html>
